Fri Jan 28 16:51:46 CET 2005 Daniel Veillard <veillard@redhat.com>

	* Makefile.am python/Makefile.am python/tests/Makefile.am
	  python/tests/basic*.py: added python tests to regression tests
	* libgamin/gam_api.c: fixed a connection bug on the clien side
	* server/gam_poll.c: fixed a bug where some changes in a directory
	  may not be caught

Thu Jan 27 23:58:00 CET 2005 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_data.c: cleanup
	* python/gamin.py: added a disconnect() method
	* server/gam_channel.c: fixed a serious bug in some disconnection
	  cases
	* server/gam_dnotify.c server/gam_poll.c server/gam_poll.h: cleanup
	  gam_poll_scan_directory() and worked out debug messages

Wed Jan 26 12:39:08 CET 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in NEWS doc/* gamin.spec.in: preparing release 0.0.21
	* python/tests/Makefile.am python/tests/basic.py : added first example

Wed Jan 26 11:59:11 CET 2005 Daniel Veillard <veillard@redhat.com>

	* doc/*: added a page for the python bindings, updated the 
	  stylesheet and rebuilt the docs.

Wed Jan 26 10:26:15 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c server/local_inotify.h: applied patch
	  from Philipp Zabel to follow the evolution of the inotify 
	  protocol in 0.18

Tue Jan 25 18:39:34 CET 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in Makefile.am gamin.spec.in python/Makefile.am
	  python/gamin.c python/gamin.py: added python bindings

Fri Jan 21 10:27:10 CET 2005 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c: markmc pointed out a doc mismatch

Thu Jan 13 18:29:30 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_channel.c: removing a compiler warning.

Thu Jan  6 16:10:20 CET 2005 Daniel Veillard <veillard@redhat.com>

	* NEWS configure.in gamin.spec.in: preparing release 0.0.20
	* doc/gamin.html doc/news.html: update to the web pages
	* server/gam_poll.c: trying to fix gnome bug #161792 compilation
	  problem.
