@@ -1,3 +1,7 @@
+Fri Jan 28 23:04:47 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* server/gam_inotify.c: inotify 0.18 patch from John McCutchan
+
 Fri Jan 28 16:51:46 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* Makefile.am python/Makefile.am python/tests/Makefile.am
